    * Improved usability of the playlist layout editor dialog.
    * Duplicate unique file identifiers are now indicated in debug output,
      along with the paths of the files, when found instead of being silently
      ignored. This can help discover multiple copies of the same file or
      files which incorrectly have the same MusicBrainz unique identifier.

  BUGFIXES:
    * Allow fetching of album covers in the unified view. (BR 220873)
    * Lyrics applet: Fixed scrollbar incorrectly displayed (and sometimes not
      at all) for long lyrics under KDE 4.4. (BR 222260)
    * Fixed bug in Photos applet that made it break with translated versions
      of Amarok. Patch by Bellegarde Cédric <gnumdk@gmail.com>. (BR 222566)
    * Lyrics applet: Fixed saving and restoring font styles. (BR 222277)
    * Lyrics applet: Fixed a bug where sometimes suggested URLs are not
      cleared when switching tracks.
    * Fixed playlist layout editor blocking control of Amarok. (BR 220825)
    * Fixed moodbar in progress slider not correctly updating after moodbar
      style change (BR 220695)
    * Fixed progress slider not moving for many streams (and possible other
      types of tracks) (BR 221747)
    * Sort artists named like "The Foo" correctly in all cases. (BR 176670)
    * Fixed behaviour when clearing the bookmark manager filter.
    * Fixed track not being added to the playlist when playing a track from
      the bookmark manager.


VERSION 2.2.2
  CHANGES:
    * The inline playlist editor now also allows resizing of auto sized items that 
      are invisible because fixed sized items already use up 100% width.
    * Enhanced the playlist sorting breadcrumb items to separately highlight
      the order inversion arrow on hover. (BR 209011)
    * The automatic character set detection for tags has been disabled; it
      caused too many problems with legitimate UTF-8 tags. It can be
      re-enabled from Settings->Collection. (Many BRs)