@@ -34,6 +34,8 @@ VERSION 2.2.3
       files which incorrectly have the same MusicBrainz unique identifier.
 
   BUGFIXES:
+    * Fixed a bug that was deleting files when using "Move to collection"
+      from the file browser. (BR 217002)
     * Allow fetching of album covers in the unified view. (BR 220873)
     * Lyrics applet: Fixed scrollbar incorrectly displayed (and sometimes not
       at all) for long lyrics under KDE 4.4. (BR 222260)
